--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "afj-ethereum-w3c-module/*": ["src"]
+      "credo-ethr-module/*": ["src"]
     },
     "types": ["jest", "node"]
   },
