--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "did-resolver": "^4.1.0",
     "ethr-did": "^3.0.38",
     "ethr-did-resolver": "^11.0.4",
-    "ethers": "^6.9.0"
+    "ethers": "^6.9.0",
+    "keccak256": "^1.0.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@credo-ts/node": "0.5.3",
@@ -41,7 +43,7 @@
     "@hyperledger/aries-askar-shared": "0.2.1",
     "@types/jest": "^26.0.23",
     "@types/node": "^18.18.8",
-    "@types/uuid": "^9.0.0",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
     "eslint": "^7.32.0",
