--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
   "dependencies": {
     "@credo-ts/askar": "0.5.3",
     "@credo-ts/core": "0.5.3",
+    "axios": "^1.6.3",
+    "bs58": "^6.0.0",
     "did-resolver": "^4.1.0",
+    "ethers": "^6.9.0",
     "ethr-did": "^3.0.38",
     "ethr-did-resolver": "^11.0.4",
-    "ethers": "^6.9.0",
     "keccak256": "^1.0.6",
-    "uuid": "^9.0.1",
-    "axios": "^1.6.3"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@credo-ts/node": "0.5.3",
