--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,8 +18,7 @@ jobs:
   release-stable:
     runs-on: ubuntu-latest
     name: Release Stable
-    outputs:
-      published: ${{ steps.changesets.outputs.published }}
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
@@ -50,7 +49,7 @@ jobs:
         run: echo "CURRENT_PACKAGE_VERSION=$(node -p "require('./package.json').version")" >> $GITHUB_ENV
 
       - name: Create Github Release
-        if: steps.changesets.outputs.published == 'true'
+        if: "startsWith(github.event.head_commit.message, 'chore(release): new version')"
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v${{ env.CURRENT_PACKAGE_VERSION }}
@@ -59,7 +58,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Release Unstable
     needs: release-stable
-    if: always() && github.event_name == 'push' && needs.release-stable.outputs.published == 'false'
+    if: "always() && (github.event_name == 'pull_request' && github.event.pull_request.head.repo.full_name == 'ayanworks/credo-ethr-module') || (github.event_name == 'push' && !startsWith(github.event.head_commit.message, 'chore(release): new version'))"
+
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
